2014-12-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Clarify rationale for sysklog run levels

2014-11-10 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Make /run/lock have 1777 permissions

2014-07-06 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove obsolete reference to /proc/sys/kernel/hotplug in udev boot script

2014-07-02 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove obsolete check for /proc/ksyms in modules boot script

2014-06-29 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove systemd references and files

2014-03-31 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Changes made to be consistent with common systemd functions

2013-08-21 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Delete duplicate entry in rc.site file.

2013-08-05 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Use STATIC_GATEWAY for ipv4-static-route purposes

2013-05-15 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove unneeded options and commands from mountfs and
     mountvirtfs when mtab is a symlink to /proc/self/mounts

2013-05-11 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Make sure the root fs is mounted read only in mountfs
     before halting

2013-01-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove local attribue of some variables for Bourne
     shell compatability
   * Specify /bin/echo in commands with -e switch for 
     Bourne shell compatability

2012-10-13 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove unneeded sleep in killproc
   * Add option for verbose fsck
   * Flatten directory structure of tarball
   * Remove /fastboot or /forcecheck if set

2012-09-05 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add udevadm trigger --action=change line to udev script
     to support initramfs better

2012-08-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Read /etc/sysconfig/console when needed in rc

2012-06-17 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Only mount /run in mountvirtfs if it is not already mounted