@@ -36,6 +36,10 @@ elif [ -n "${PEER}" ]; then
    args="${args} ${IP} peer ${PEER}"
 fi
 
+if [ -n "${LABEL}" ]; then
+   args="${args} label ${LABEL}"
+fi
+
 if [ -n "${BROADCAST}" ]; then
    args="${args} broadcast ${BROADCAST}"
 fi
