@@ -90,6 +90,7 @@ fi
 # is not set to yes
 if [ "${IN_BOOT}" = "1" -a "${ONBOOT}" != "yes" ]; then
    log_info_msg2 "skipped"
+   echo
    exit 0
 fi
 
