@@ -39,6 +39,11 @@
       <para>2015-02-08</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Update ipv4-static, ifup, and ifup.8
+          in bootscripts to better support multiple IP addresses
+          on an interface.</para>
+        </listitem>
+        <listitem>
           <para>[Chris] - Updated FHS URL to new location.</para>
         </listitem>
       </itemizedlist>
